Intro to Bootstrap, Design, and Photos Complete

--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
         <div class="carousel-item active" style="background-image: url('images/carousel_1.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Pet Care Services</h3>
-            <p>Dogsitting,Dog Walking,Boarding</p>
+            <p>Dogsitting  Dog Walking  Boarding</p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('images/carousel_2.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
-            <p>This is a description for the second slide.</p>
+            <h3>Simplify Your Life</h3>
+            <p>One Stop Shop For Pet and Home Care Services</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('images/carousel_3.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
+            <h3>Home Care Services</h3>
+            <p> House Cleaning  Lawn Care  Leaf Removal </p>
           </div>
         </div>
       </div>
