noticeable title with Hover Hot Pink

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <h1 class="glow">Dogs&Domain</h1>
+  
+
+
+<div class="zoom"></div>
 </head>
 
 <body>
@@ -139,7 +144,7 @@
       </div>
     </div>
     <!-- /.row -->
-
+  
 
     <!-- Portfolio Section -->
   
@@ -150,7 +155,9 @@
         <div class="card h-100">
           <a href="#">
             <img class="card-img-top" src="images/french_bulldog.jpg" alt="">
-          </a>
+         
+         </a>
+         
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project One</a>
